__syntax_error2.txt
C:\Users\cabba\OneDrive\Desktop\UDL-Tool-Updated\stem_lab\stem_lab_module.js:45575
      );
      ^

SyntaxError: Unexpected token ')'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.11.1
